win_Xcomp_build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1139,6 +1139,69 @@ endif()
 if(MINGW)
   set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wa,-mbig-obj")
   set(EXTRA_LIBRARIES mswsock;ws2_32;iphlpapi;crypt32;bcrypt)
+  # Add Abseil libraries for protobuf compatibility
+  find_library(ABSL_LOG_INTERNAL_MESSAGE absl_log_internal_message)
+  find_library(ABSL_LOG_INTERNAL_LOG_SINK_SET absl_log_internal_log_sink_set)
+  find_library(ABSL_LOG_INTERNAL_FORMAT absl_log_internal_format)
+  find_library(ABSL_LOG_INTERNAL_CHECK_OP absl_log_internal_check_op)
+  find_library(ABSL_LOG_INTERNAL_CONDITIONS absl_log_internal_conditions)
+  find_library(ABSL_LOG_INTERNAL_STRIP absl_log_internal_strip)
+  find_library(ABSL_LOG_INTERNAL_NULLSTREAM absl_log_internal_nullstream)
+  find_library(ABSL_LOG_INTERNAL_LOG_MESSAGE absl_log_internal_log_message)
+  find_library(ABSL_LOG_INTERNAL_APPEND_TRUNCATED absl_log_internal_append_truncated)
+  find_library(ABSL_LOG_INTERNAL_GLOBALS absl_log_internal_globals)
+  find_library(ABSL_LOG_INTERNAL_PROTO absl_log_internal_proto)
+  find_library(ABSL_LOG_INTERNAL_STRUCTURED absl_log_internal_structured)
+  find_library(ABSL_LOG_INTERNAL_VOIDIFY absl_log_internal_voidify)
+  find_library(ABSL_LOG_INTERNAL_LOG_SINK absl_log_internal_log_sink)
+  find_library(ABSL_LOG_INTERNAL_FLAGS absl_log_internal_flags)
+  
+  if(ABSL_LOG_INTERNAL_MESSAGE)
+    list(APPEND EXTRA_LIBRARIES ${ABSL_LOG_INTERNAL_MESSAGE})
+  endif()
+  if(ABSL_LOG_INTERNAL_LOG_SINK_SET)
+    list(APPEND EXTRA_LIBRARIES ${ABSL_LOG_INTERNAL_LOG_SINK_SET})
+  endif()
+  if(ABSL_LOG_INTERNAL_FORMAT)
+    list(APPEND EXTRA_LIBRARIES ${ABSL_LOG_INTERNAL_FORMAT})
+  endif()
+  if(ABSL_LOG_INTERNAL_CHECK_OP)
+    list(APPEND EXTRA_LIBRARIES ${ABSL_LOG_INTERNAL_CHECK_OP})
+  endif()
+  if(ABSL_LOG_INTERNAL_CONDITIONS)
+    list(APPEND EXTRA_LIBRARIES ${ABSL_LOG_INTERNAL_CONDITIONS})
+  endif()
+  if(ABSL_LOG_INTERNAL_STRIP)
+    list(APPEND EXTRA_LIBRARIES ${ABSL_LOG_INTERNAL_STRIP})
+  endif()
+  if(ABSL_LOG_INTERNAL_NULLSTREAM)
+    list(APPEND EXTRA_LIBRARIES ${ABSL_LOG_INTERNAL_NULLSTREAM})
+  endif()
+  if(ABSL_LOG_INTERNAL_LOG_MESSAGE)
+    list(APPEND EXTRA_LIBRARIES ${ABSL_LOG_INTERNAL_LOG_MESSAGE})
+  endif()
+  if(ABSL_LOG_INTERNAL_APPEND_TRUNCATED)
+    list(APPEND EXTRA_LIBRARIES ${ABSL_LOG_INTERNAL_APPEND_TRUNCATED})
+  endif()
+  if(ABSL_LOG_INTERNAL_GLOBALS)
+    list(APPEND EXTRA_LIBRARIES ${ABSL_LOG_INTERNAL_GLOBALS})
+  endif()
+  if(ABSL_LOG_INTERNAL_PROTO)
+    list(APPEND EXTRA_LIBRARIES ${ABSL_LOG_INTERNAL_PROTO})
+  endif()
+  if(ABSL_LOG_INTERNAL_STRUCTURED)
+    list(APPEND EXTRA_LIBRARIES ${ABSL_LOG_INTERNAL_STRUCTURED})
+  endif()
+  if(ABSL_LOG_INTERNAL_VOIDIFY)
+    list(APPEND EXTRA_LIBRARIES ${ABSL_LOG_INTERNAL_VOIDIFY})
+  endif()
+  if(ABSL_LOG_INTERNAL_LOG_SINK)
+    list(APPEND EXTRA_LIBRARIES ${ABSL_LOG_INTERNAL_LOG_SINK})
+  endif()
+  if(ABSL_LOG_INTERNAL_FLAGS)
+    list(APPEND EXTRA_LIBRARIES ${ABSL_LOG_INTERNAL_FLAGS})
+  endif()
+  
   if(DEPENDS)
     set(ICU_LIBRARIES icuio icui18n icuuc icudt icutu iconv)
   else()
