win_Xcomp_build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1139,22 +1139,28 @@ endif()
 if(MINGW)
   set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wa,-mbig-obj")
   set(EXTRA_LIBRARIES mswsock;ws2_32;iphlpapi;crypt32;bcrypt)
-  # Add basic Abseil libraries for protobuf compatibility
+  # Add Abseil libraries for protobuf compatibility - using actual available libraries
   find_library(ABSL_LOG_INTERNAL_MESSAGE absl_log_internal_message)
   find_library(ABSL_LOG_INTERNAL_LOG_SINK_SET absl_log_internal_log_sink_set)
   find_library(ABSL_LOG_INTERNAL_FORMAT absl_log_internal_format)
   find_library(ABSL_LOG_INTERNAL_CHECK_OP absl_log_internal_check_op)
   find_library(ABSL_LOG_INTERNAL_CONDITIONS absl_log_internal_conditions)
-  find_library(ABSL_LOG_INTERNAL_STRIP absl_log_internal_strip)
-  find_library(ABSL_LOG_INTERNAL_NULLSTREAM absl_log_internal_nullstream)
-  find_library(ABSL_LOG_INTERNAL_LOG_MESSAGE absl_log_internal_log_message)
-  find_library(ABSL_LOG_INTERNAL_APPEND_TRUNCATED absl_log_internal_append_truncated)
   find_library(ABSL_LOG_INTERNAL_GLOBALS absl_log_internal_globals)
   find_library(ABSL_LOG_INTERNAL_PROTO absl_log_internal_proto)
-  find_library(ABSL_LOG_INTERNAL_STRUCTURED absl_log_internal_structured)
-  find_library(ABSL_LOG_INTERNAL_VOIDIFY absl_log_internal_voidify)
-  find_library(ABSL_LOG_INTERNAL_LOG_SINK absl_log_internal_log_sink)
-  find_library(ABSL_LOG_INTERNAL_FLAGS absl_log_internal_flags)
+  find_library(ABSL_LOG_SINK absl_log_sink)
+  find_library(ABSL_LOG_FLAGS absl_log_flags)
+  find_library(ABSL_LOG_GLOBALS absl_log_globals)
+  find_library(ABSL_LOG_SEVERITY absl_log_severity)
+  find_library(ABSL_LOG_INITIALIZE absl_log_initialize)
+  find_library(ABSL_CORD absl_cord)
+  find_library(ABSL_CORD_INTERNAL absl_cord_internal)
+  find_library(ABSL_CORDZ_FUNCTIONS absl_cordz_functions)
+  find_library(ABSL_CORDZ_HANDLE absl_cordz_handle)
+  find_library(ABSL_CORDZ_INFO absl_cordz_info)
+  find_library(ABSL_CORDZ_SAMPLE_TOKEN absl_cordz_sample_token)
+  find_library(ABSL_CRC_CORD_STATE absl_crc_cord_state)
+  find_library(ABSL_RAW_LOGGING_INTERNAL absl_raw_logging_internal)
+  find_library(ABSL_VLOG_CONFIG_INTERNAL absl_vlog_config_internal)
   
   # Add found libraries to EXTRA_LIBRARIES
   if(ABSL_LOG_INTERNAL_MESSAGE)
@@ -1172,35 +1178,53 @@ if(MINGW)
   if(ABSL_LOG_INTERNAL_CONDITIONS)
     list(APPEND EXTRA_LIBRARIES ${ABSL_LOG_INTERNAL_CONDITIONS})
   endif()
-  if(ABSL_LOG_INTERNAL_STRIP)
-    list(APPEND EXTRA_LIBRARIES ${ABSL_LOG_INTERNAL_STRIP})
-  endif()
-  if(ABSL_LOG_INTERNAL_NULLSTREAM)
-    list(APPEND EXTRA_LIBRARIES ${ABSL_LOG_INTERNAL_NULLSTREAM})
-  endif()
-  if(ABSL_LOG_INTERNAL_LOG_MESSAGE)
-    list(APPEND EXTRA_LIBRARIES ${ABSL_LOG_INTERNAL_LOG_MESSAGE})
-  endif()
-  if(ABSL_LOG_INTERNAL_APPEND_TRUNCATED)
-    list(APPEND EXTRA_LIBRARIES ${ABSL_LOG_INTERNAL_APPEND_TRUNCATED})
-  endif()
   if(ABSL_LOG_INTERNAL_GLOBALS)
     list(APPEND EXTRA_LIBRARIES ${ABSL_LOG_INTERNAL_GLOBALS})
   endif()
   if(ABSL_LOG_INTERNAL_PROTO)
     list(APPEND EXTRA_LIBRARIES ${ABSL_LOG_INTERNAL_PROTO})
   endif()
-  if(ABSL_LOG_INTERNAL_STRUCTURED)
-    list(APPEND EXTRA_LIBRARIES ${ABSL_LOG_INTERNAL_STRUCTURED})
+  if(ABSL_LOG_SINK)
+    list(APPEND EXTRA_LIBRARIES ${ABSL_LOG_SINK})
   endif()
-  if(ABSL_LOG_INTERNAL_VOIDIFY)
-    list(APPEND EXTRA_LIBRARIES ${ABSL_LOG_INTERNAL_VOIDIFY})
+  if(ABSL_LOG_FLAGS)
+    list(APPEND EXTRA_LIBRARIES ${ABSL_LOG_FLAGS})
   endif()
-  if(ABSL_LOG_INTERNAL_LOG_SINK)
-    list(APPEND EXTRA_LIBRARIES ${ABSL_LOG_INTERNAL_LOG_SINK})
+  if(ABSL_LOG_GLOBALS)
+    list(APPEND EXTRA_LIBRARIES ${ABSL_LOG_GLOBALS})
   endif()
-  if(ABSL_LOG_INTERNAL_FLAGS)
-    list(APPEND EXTRA_LIBRARIES ${ABSL_LOG_INTERNAL_FLAGS})
+  if(ABSL_LOG_SEVERITY)
+    list(APPEND EXTRA_LIBRARIES ${ABSL_LOG_SEVERITY})
+  endif()
+  if(ABSL_LOG_INITIALIZE)
+    list(APPEND EXTRA_LIBRARIES ${ABSL_LOG_INITIALIZE})
+  endif()
+  if(ABSL_CORD)
+    list(APPEND EXTRA_LIBRARIES ${ABSL_CORD})
+  endif()
+  if(ABSL_CORD_INTERNAL)
+    list(APPEND EXTRA_LIBRARIES ${ABSL_CORD_INTERNAL})
+  endif()
+  if(ABSL_CORDZ_FUNCTIONS)
+    list(APPEND EXTRA_LIBRARIES ${ABSL_CORDZ_FUNCTIONS})
+  endif()
+  if(ABSL_CORDZ_HANDLE)
+    list(APPEND EXTRA_LIBRARIES ${ABSL_CORDZ_HANDLE})
+  endif()
+  if(ABSL_CORDZ_INFO)
+    list(APPEND EXTRA_LIBRARIES ${ABSL_CORDZ_INFO})
+  endif()
+  if(ABSL_CORDZ_SAMPLE_TOKEN)
+    list(APPEND EXTRA_LIBRARIES ${ABSL_CORDZ_SAMPLE_TOKEN})
+  endif()
+  if(ABSL_CRC_CORD_STATE)
+    list(APPEND EXTRA_LIBRARIES ${ABSL_CRC_CORD_STATE})
+  endif()
+  if(ABSL_RAW_LOGGING_INTERNAL)
+    list(APPEND EXTRA_LIBRARIES ${ABSL_RAW_LOGGING_INTERNAL})
+  endif()
+  if(ABSL_VLOG_CONFIG_INTERNAL)
+    list(APPEND EXTRA_LIBRARIES ${ABSL_VLOG_CONFIG_INTERNAL})
   endif()
   
   if(DEPENDS)
