--- a/src/gui_miner/CMakeLists.txt
+++ b/src/gui_miner/CMakeLists.txt
@@ -117,8 +117,8 @@ if(WIN32)
     file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/app_icon.rc" 
         "IDI_ICON1 ICON \"${CMAKE_CURRENT_SOURCE_DIR}/icons/qsf_icon.ico\"\n"
         "1 VERSIONINFO\n"
-        "FILEVERSION 2,0,0,0\n"
-        "PRODUCTVERSION 2,0,0,0\n"
+        "FILEVERSION 2,1,0,0\n"
+        "PRODUCTVERSION 2,1,0,0\n"
         "FILEFLAGSMASK 0x3fL\n"
         "FILEFLAGS 0x0L\n"
         "FILEOS 0x40004L\n"
@@ -129,14 +129,15 @@ if(WIN32)
         "    BEGIN\n"
         "        BLOCK \"040904b0\"\n"
         "        BEGIN\n"
-        "            VALUE \"CompanyName\", \"QSF Coin Project\"\n"
-        "            VALUE \"FileDescription\", \"QSF Quantum-Safe GUI Miner\"\n"
-        "            VALUE \"FileVersion\", \"2.0.0.0\"\n"
+        "            VALUE \"CompanyName\", \"QuantumSafeFoundation (theqsf.org)\"\n"
+        "            VALUE \"FileDescription\", \"QSF Quantum-Safe GUI Miner - Quantum Leap Release\"\n"
+        "            VALUE \"FileVersion\", \"2.1.0.0\"\n"
         "            VALUE \"InternalName\", \"qsf-gui-miner\"\n"
-        "            VALUE \"LegalCopyright\", \"Copyright (c) 2024, The QSF Quantum-Safe Coin Project\"\n"
+        "            VALUE \"LegalCopyright\", \"Copyright (c) 2025, QuantumSafeFoundation\"\n"
         "            VALUE \"OriginalFilename\", \"qsf-gui-miner.exe\"\n"
         "            VALUE \"ProductName\", \"QSF Quantum-Safe Miner\"\n"
-        "            VALUE \"ProductVersion\", \"2.0.0.0\"\n"
+        "            VALUE \"ProductVersion\", \"2.1.0.0\"\n"
+        "            VALUE \"ReleaseName\", \"Quantum Leap\"\n"
         "        END\n"
         "    END\n"
         "    BLOCK \"VarFileInfo\"\n"
