--- a/src/version.cpp.in
+++ b/src/version.cpp.in
@@ -1,6 +1,6 @@
 #define DEF_QSF_VERSION_TAG "@VERSIONTAG@"
-#define DEF_QSF_VERSION "2.0.0.0"
-#define DEF_QSF_RELEASE_NAME "Quantum Safe"
+#define DEF_QSF_VERSION "2.1.0.0"
+#define DEF_QSF_RELEASE_NAME "Quantum Leap"
 #define DEF_QSF_VERSION_FULL DEF_QSF_VERSION "-" DEF_QSF_VERSION_TAG
 #define DEF_QSF_VERSION_IS_RELEASE @VERSION_IS_RELEASE@
 
