--- a/src/gui_miner/CMakeLists.txt
+++ b/src/gui_miner/CMakeLists.txt
@@ -117,8 +117,8 @@ if(WIN32)
     file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/app_icon.rc" 
         "IDI_ICON1 ICON \"${CMAKE_CURRENT_SOURCE_DIR}/icons/qsf_icon.ico\"\n"
         "1 VERSIONINFO\n"
-        "FILEVERSION 3,0,2,0\n"
-        "PRODUCTVERSION 3,0,2,0\n"
+        "FILEVERSION 3,0,4,0\n"
+        "PRODUCTVERSION 3,0,4,0\n"
         "FILEFLAGSMASK 0x3fL\n"
         "FILEFLAGS 0x0L\n"
         "FILEOS 0x40004L\n"
@@ -130,14 +130,14 @@ if(WIN32)
         "        BLOCK \"040904b0\"\n"
         "        BEGIN\n"
         "            VALUE \"CompanyName\", \"QuantumSafeFoundation (theqsf.org)\"\n"
-        "            VALUE \"FileDescription\", \"QSF Quantum-Safe GUI Miner - Quantum Leap Release\"\n"
-        "            VALUE \"FileVersion\", \"3.0.2.0\"\n"
+        "            VALUE \"FileDescription\", \"QSF Quantum-Safe GUI Miner - Entropy Reset Release\"\n"
+        "            VALUE \"FileVersion\", \"3.0.4.0\"\n"
         "            VALUE \"InternalName\", \"qsf-gui-miner\"\n"
         "            VALUE \"LegalCopyright\", \"Copyright (c) 2025, QuantumSafeFoundation\"\n"
         "            VALUE \"OriginalFilename\", \"qsf-gui-miner.exe\"\n"
         "            VALUE \"ProductName\", \"QSF Quantum-Safe Miner\"\n"
-        "            VALUE \"ProductVersion\", \"3.0.2.0\"\n"
-        "            VALUE \"ReleaseName\", \"Quantum Leap\"\n"
+        "            VALUE \"ProductVersion\", \"3.0.4.0\"\n"
+        "            VALUE \"ReleaseName\", \"Entropy Reset\"\n"
         "        END\n"
         "    END\n"
         "    BLOCK \"VarFileInfo\"\n"
